<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackWork"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textSettings"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="60sp"
        android:text="@string/Settings"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/mainLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50sp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/leftSideSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVFocusTime"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/focus_time" />

            <TextView
                android:id="@+id/TVChillTime"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="10sp"
                android:text="@string/chill_time" />

            <TextView
                android:id="@+id/TVLongBreak"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10sp"
                android:text="@string/long_break" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightSideSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ETFocusTime"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_white"
                android:gravity="start"
                android:inputType="number"
                android:text="@string/_25"
                android:textColor="#000" />

            <EditText
                android:id="@+id/ETChillTime"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:background="@color/text_white"
                android:gravity="start"
                android:inputType="number"
                android:text="@string/_5"
                android:textColor="#000" />

            <EditText
                android:id="@+id/ETRestTime"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/text_white"
                android:gravity="start"
                android:inputType="number"
                android:text="@string/_15"
                android:textColor="#000" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/checkBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/CBSound"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/checkbox"
            android:text="@string/sound" />

    </LinearLayout>

    <!--    MENU-->
    <LinearLayout
        android:id="@+id/Menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/NavOffWork"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/IBTodoList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo_list"
            android:onClick="goTodoList"
            android:scaleType="centerInside"
            android:src="@drawable/first_nav_work" />

        <ImageButton
            android:id="@+id/IBPomodoro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pomodoro"
            android:onClick="goPomodoro"
            android:scaleType="centerInside"
            android:src="@drawable/second_nav_work" />

        <ImageButton
            android:id="@+id/IBSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/NavOnWork"
            android:contentDescription="@string/settings"
            android:scaleType="centerInside"
            android:src="@drawable/third_nav_work" />
    </LinearLayout>

</RelativeLayout>